# UMT-pythonweb-hw-11

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  SPEC.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0e8c4463319b_create_users_table.py  2c2664b73a1a_widen_users_refresh_token_to_text.py  a4e0175af643_add_user_id_to_contacts_and_per_user_.py  efd7f5147614_create_contacts_table.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py  limiter.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  deps.py  email.py  exceptions.py  upload_file.py  users.py
src/services/templates/: verify_email.html
tests/: conftest.py  test_auth.py  test_birthdays.py  test_contacts_ownership.py  test_contacts_repository.py  test_contacts_routes.py  test_contacts_service.py  test_healthcheck.py  test_search.py  test_users.py
